@@ -26,12 +26,12 @@
 #    POST_EACH    = Script to run after each path backup's completed.
 
 
-SOURCE_LIST=/etc/backup.list
-DEST_DIR=/usr/local/backup/backup-`date +"%Y-%m-%d"`
+SOURCE_LIST=/home/todsah/dev/backup/test/backup.list
+DEST_DIR=/home/todsah/dev/backup/test/backups/backup-`hostname`-`date +"%Y-%m-%d"`
 NICENESS=19
 MODE=600
-OWNERSHIP=backup:root
-PRE=/usr/local/sbin/backup/pre.sh
-POST=/usr/local/sbin/backup/post.sh
-PRE_EACH=
-POST_EACH=/usr/local/sbin/backup/post_each.sh
+OWNERSHIP=todsah:todsah
+#PRE=/usr/local/sbin/backup/pre.sh
+#POST=/usr/local/sbin/backup/post.sh
+#PRE_EACH=
+#POST_EACH=/usr/local/sbin/backup/post_each.sh
